// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> should render 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c5:link,
.c5:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):active,
.c5:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c5[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c4 ul {
  z-index: 100;
}

.c4 li[role="option"]:nth-child(2n + 1) {
  background: #f2f5fa;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 50px;
  margin: 0;
  padding: 0 calc(50px + 1rem) 0 1.6rem;
  font-size: inherit;
  font-family: inherit;
  background: #f2f5fa;
  border: 1px solid #bbcadf;
  border-radius: 2.4rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  position: absolute;
  top: 1px;
  right: 1px;
  width: calc(50px - 2px);
  height: calc(50px - 2px);
  border-top-right-radius: 0.6rem;
  border-bottom-right-radius: 0.6rem;
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1.6rem;
  }
}

<div>
  <form
    class="c0"
  >
    <label
      class="c1"
      for="main-search-input"
    >
      <span
        class="c2"
      >
        Rechercher
      </span>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-cdtn-documents-suggester"
        role="combobox"
        style="flex: 1;"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-cdtn-documents-suggester"
          autocomplete="off"
          class="c3"
          id="main-search-input"
          name="query"
          placeholder="Recherche"
          type="search"
          value=""
        />
        <div
          class="c4"
          id="react-autowhatever-cdtn-documents-suggester"
          role="listbox"
        />
      </div>
    </label>
    <button
      class="c5 c6"
      type="submit"
    >
      <svg
        viewBox="0 0 20 20"
      >
        <title />
        <path
          d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </form>
</div>
`;

exports[`<SearchBar /> should render suggestions 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 4rem;
  padding: 0 1rem;
  color: #3e486e;
  background: transparent;
  border-color: transparent;
  box-shadow: none;
  opacity: 1;
}

.c7:link,
.c7:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):active,
.c7:not([disabled]):focus {
  opacity: 0.6;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: transparent;
  border-color: transparent;
}

.c7[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c6 {
  display: inline-block;
}

.c5 p {
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
}

.c4 ul {
  z-index: 100;
}

.c4 li[role="option"]:nth-child(2n + 1) {
  background: #f2f5fa;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 50px;
  margin: 0;
  padding: 0 calc(50px + 1rem) 0 1.6rem;
  font-size: inherit;
  font-family: inherit;
  background: #f2f5fa;
  border: 1px solid #bbcadf;
  border-radius: 2.4rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8 {
  position: absolute;
  top: 1px;
  right: 1px;
  width: calc(50px - 2px);
  height: calc(50px - 2px);
  border-top-right-radius: 0.6rem;
  border-bottom-right-radius: 0.6rem;
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0 1.6rem;
  }
}

<div>
  <form
    class="c0"
  >
    <label
      class="c1"
      for="main-search-input"
    >
      <span
        class="c2"
      >
        Rechercher
      </span>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-cdtn-documents-suggester"
        role="combobox"
        style="flex: 1;"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-cdtn-documents-suggester"
          autocomplete="off"
          class="c3"
          id="main-search-input"
          name="query"
          placeholder="Recherche"
          type="search"
          value="yolo"
        />
        <div
          class="c4"
          id="react-autowhatever-cdtn-documents-suggester"
          role="listbox"
        >
          <ul
            role="listbox"
            style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
          >
            <li
              aria-selected="false"
              data-suggestion-index="0"
              id="react-autowhatever-cdtn-documents-suggester--item-0"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  foo
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="1"
              id="react-autowhatever-cdtn-documents-suggester--item-1"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  foobar
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="2"
              id="react-autowhatever-cdtn-documents-suggester--item-2"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  foo bar ?
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="3"
              id="react-autowhatever-cdtn-documents-suggester--item-3"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c5"
              >
                <div
                  class="c6"
                >
                  foo bazzz
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </label>
    <button
      class="c7 c8"
      type="submit"
    >
      <svg
        viewBox="0 0 20 20"
      >
        <title />
        <path
          d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </form>
</div>
`;
